GateWay+unitTest implemented
